--- a/frequent-fliers-html/sign-up-styles.css
+++ b/frequent-fliers-html/sign-up-styles.css
@@ -65,27 +65,27 @@ h2, p {
     width: 100%;
     height: 70%;
     object-fit: cover;
-    margin: 0px;
+    display: block;
 }
 
 .button-bar {
     display: flex;
     justify-content: center;
     align-content: center;  
+    vertical-align: top;
     width: 100%;
+    height: fit-content;
     background-color: #FFA5A5;
-    padding: 10px 0;
-    margin-top: 0px;
 }
 
 
 .button-container {
     display: flex;
     justify-content: center;
-    align-content: center;
     gap: 20px;
+    margin: 10px;
     flex-wrap: wrap;
-}
+  }
 
 button {
     padding: 12px 24px;
